Shang New Live/src/objects/Feedback__c.object
<CustomObject>
    <fields>
        <fullName>AWS_Id__c</fullName>
        <label>AWS Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Description__c</fullName>
        <formula>TEXT(Feedback_Option__r.Feedback_Option__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feedback Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feedback_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback Option</label>
        <referenceTo>Feedback_Option__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feedback_Type__c</fullName>
        <label>Feedback Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Unsatisfied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Mobile_Display__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Mobile Display</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reported_Date_Time__c</fullName>
        <label>Reported Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Resolved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Resolved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Feedback</relationshipLabel>
        <relationshipName>Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resolved_Date_Time__c</fullName>
        <label>Resolved Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Progress_Status</valueSetName>
        </valueSet>
    </fields>
    <label>Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LAST_UPDATE</field>
            <operation>greaterThan</operation>
            <value>7/12/2017 12:00 AM</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{YYYYMM}-FB-{00000000}</displayFormat>
        <label>Feedback Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>